HOL-2x71/2x71_podsetup/archive/student_files/2x37-04_lab/siteb/ingress/avinetworks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avinetworks-ingress
  namespace: default
  labels:
    app: gslb
spec:
  rules:
  - host: avinetworks.region01b.corp.vmbeans.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: avinetworks-cip
            port:
              number: 80
