HOL-2x71/2x71_podsetup/archive/student_files/2x37-04_lab/siteb/ingress/juice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
  namespace: default
spec:
  tls:
  - hosts:
      - secure-juice.region01b.corp.vmbeans.com
    secretName: 2571-wc-tls
  rules:
  - host: secure-juice.region01b.corp.vmbeans.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: juice-cip
            port:
              number: 80
